# ccs-scripts

./: CONTRIBUTING.md  Dockerfile  Dockerfile-fmmo  Dockerfile-prehelp  README.md  mkdocs.yml  mkdocs_analytics.yml  pyproject.toml  radixconfig.yaml
.github/workflows/: black.yml  ccs_scripts.yml  codecov.yml  test_mass_maps.yml  tests.yml
docs/: about.md  contact.md  index.md  tutorials-resources.md  updates.md
docs/azure/: ert.md  get-started.md
docs/stylesheets/: extra_original.css  wrap.css
docs/webviz/: ert-config.yml  overview.md  webviz-config.yml
docs/webviz/maps/: agg-map.md  mass-map.md  mig-time.md  theory.md
docs/webviz/plugin/: co2-leakage.md
docs/webviz/scripts/: co2-containment.md  plume-area.md  plume-extent.md
mkdocs/: Dockerfile  mkdocs.yml  nginx.conf  radixconfig.yaml
mkdocs/docs/: co2_plume.md  tutorials.md
mkdocs/docs/azure/: get-started.md
mkdocs/site/: 404.html  index.html
mkdocs/site/about/: index.html
mkdocs/site/co2_plume/: index.html
mkdocs/site/contact/: index.html
mkdocs/site/tutorials/: index.html
mkdocs/site/updates/: index.html
site/: 404.html  index.html
site/about/: index.html
site/azure/ert/: index.html
site/azure/get-started/: index.html
site/co2_plume/: index.html
site/contact/: index.html
site/search/: search_index.json
site/stylesheets/: extra-nonequinor.css  neoteroi-cards.css
site/tutorials/: index.html
site/updates/: index.html
site/webviz/overview/: index.html
src/ccs_scripts/aggregate/: _co2_mass.py  _config.py  _grid_aggregation.py  _migration_time.py  _parser.py  _utils.py  aggregate_map.py  co2_mass_map.py  co2_mass_maps.py  grid3d_aggregate_map.py  grid3d_aggregate_maps.py  grid3d_co2_mass_map.py  grid3d_migration_time.py  grid3d_migration_time_maps.py  migration_time_map.py  migration_time_maps.py
src/ccs_scripts/co2_containment/: calculate.py  co2_calculation.py  co2_containment.py
src/ccs_scripts/co2_mass_maps/: _co2_mass.py  _parser.py  co2_mass_maps.py  grid3d_co2_mass.py
src/ccs_scripts/co2_plume/: plume_extent.py
src/ccs_scripts/co2_plume_area/: co2_plume_area.py
tests/: conftest.py  test_aggregate_maps.py  test_co2_calculate.py  test_co2_containment.py  test_co2_mass_maps.py  test_co2_plume_area.py  test_co2_plume_extent.py  test_hook_implementations.py  test_migration_time_maps.py
tests/pflotran/model/: P_FLT_01.in  (+16 more)
tests/synthetic_model/: info.txt
tests/yaml/: config_aggregate1.yml  config_aggregate2.yml  config_aggregate3.yml  config_aggregate4.yml  config_aggregate5.yml  config_aggregate6.yml  config_co2_mass_maps_reek.yml  config_co2_plume_extent_plume_tracking.yml  config_migration_time1.yml  config_migration_time2.yml
(+86 files in other folders)
