[tool.poetry]
name = "ccs-scripts"
version = "0.5.0_dev"
description = "Equinor's collection of scripts related to CCS"
authors = ["Equinor <fmmo@equinor.com>"]
# license = { file = "LICENSE" }
readme = "README.md"
package-mode = false
keywords = ["ccs", "subsurface", "reservoir", "scientific", "engineering"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.8.1"
resdata = "^4.2.1"
numpy = "<2"
pandas = "^1.4.4"  # Cannot use "^2.2.1" for python=3.8
shapely = "^2.0.3"
xtgeo = "^3.8.0"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.5.0"
scipy = "^1.7.1"  # Cannot use "^1.12.0" for python=3.8
rstcheck = "^6.2.1"
rstcheck-core = "^1.2.1"
types-Jinja2 = "^2.11.9"
types-PyYAML = "^6.0.12.20240311"
types-pkg-resources = "^0.1.3"
types-python-dateutil = "^2.9.0.20240316"
autoapi = "^2.0.1"
# Sphinx = "^7.2.6"
# sphinx-argparse = "^0.4.0"
# sphinx-autodoc-typehints = "^2.0.0"
# sphinx-copybutton = "^0.5.2"
# sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/equinor/ccs_scripts"
Repository = "https://github.com/equinor/ccs_scripts"
# Documentation = "https://equinor.github.io/ccs_scripts"

[project.scripts]
co2_containment = "ccs_scripts.co2_containment.co2_containment:main"
co2_plume_area = "ccs_scripts.co2_plume_area.co2_plume_area:main"
co2_plume_extent = "ccs_scripts.co2_plume_extent.co2_plume_extent:main"

[tool.poetry.scripts]
co2_containment = "ccs_scripts.co2_containment.co2_containment:main"
co2_plume_area = "ccs_scripts.co2_plume_area.co2_plume_area:main"
co2_plume_extent = "ccs_scripts.co2_plume_extent.co2_plume_extent:main"

[project.entry-points.ert]
ccs_scripts_jobs = "ccs_scripts.hook_implementations.jobs"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
disable = "missing-module-docstring"

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".tox",
    ".env",
    "dist",
    "build",
    # "opm-common",
]

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]
